# glue-job-cdk

./: .gitignore  .mise.toml  README.md  package-lock.json  package.json
app1/src/lambda/hello/: index.py  pyproject.toml
glue-app/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements_awsglue4.0.txt  requirements_dev.txt  requirements_dev_container.txt  spark.conf
glue-app/scripts/: run_job.sh  run_tests.sh
glue-app/src/glue_app/common/: func.py
glue-app/src/glue_app/handlers/: sample.py
glue-app/src/glue_app/jobs/: sample.py
glue-app/src/glue_app/schemes/: schema.py
glue-app/tests/: conftest.py  test_sample.py
hello-cdk/: package-lock.json  package.json  responce.json
hello-cdk/lib/: athena-stack.ts  datalake-input-schemes.json  datalake-output-schemes.json  datalake-stack.ts  hello-cdk-stack.ts  sample-etl-stack.ts
test-data-gen/: README.md  pyproject.toml
test-data-gen/src/test_data_gen/: __init__.py  generate.py
