[tool.poetry]
name = "glue-app"
version = "0.1.0"
description = ""
authors = ["mmocchi <akihiro.matsumoto.exe@gmail.com>"]
readme = "README.md"

packages = [{include = "glue_app", from="src"}]
exclude = [
    "src/glue_app/jobs",
]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = [ "src",]
testpaths = [ "tests",]