[project]
name = "glue-app"
version = "0.1.0"
description = ""
authors = [
    {name = "mmocchi", email = "akihiro.matsumoto.exe@gmail.com"},
]
readme = "README.md"

requires-python = "==3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/glue_app"]
exclude = ["src/glue_app/jobs/*.py"]

[tool.pytest.ini_options]
pythonpath = [ "src",]
testpaths = [ "tests",]

[tool.uv]
dev-dependencies = [
    "wheel>=0.44.0",
    "build>=1.2.1",
]
