[project]
name = "glue-app"
version = "0.1.0"
description = ""
authors = [
    {name = "mmocchi", email = "akihiro.matsumoto.exe@gmail.com"},
]
readme = "README.md"

requires-python = "==3.10"
dependencies=[
    "pandera[pyspark]==0.20.3",
]

[tool.uv]
dev-dependencies = [
    "wheel>=0.37.0",
    "build>=1.2.1",
    "ruff==0.6.2",
    "taskipy>=1.13.0",
]

[project.optional-dependencies]
# for test container
test = [
    "pytest-cov==5.0.0",
]

# ここでglue-job 4.0組み込みのバージョンを管理する
# 組み込みバージョンとして指定されたバージョンリストの依存関係が破綻しているため、すべては記載していない
awsglue4 = [
    "numpy==1.23.5", # glue-job 4.0組み込みと同じバージョン
    "pandas==1.5.1", # glue-job 4.0組み込みと同じバージョン
    "packaging==23.0", # glue-job 4.0組み込みと同じバージョン
    "python-dateutil==2.8.2", # glue-job 4.0組み込みと同じバージョン
    "pytz==2021.1", # glue-job 4.0組み込みと同じバージョン
    "six==1.16.0", # glue-job 4.0組み込みと同じバージョン
    "typing_extensions==4.4.0", # glue-job 4.0組み込みと同じバージョン
    "wrapt==1.14.1", # glue-job 4.0組み込みと同じバージョン
]


[tool.taskipy.tasks]
# task runner
hello = "echo Hello from taskipy!"
build_wheel = "python -m build --wheel"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/glue_app"]
exclude = ["src/glue_app/jobs/*.py"]

[tool.pytest.ini_options]
pythonpath = [ "src",]
testpaths = [ "tests",]

